# gec_unlp_2026

./: .env.example  .gitignore  README.md  config.test.yaml  config.validation.yaml  main.py  model_snapshots.json  pyproject.toml
data/unlp_shared_2023_test/: test.src.tok  test.src.txt
src/: agent_registry.py
src/agents/: __init__.py  base.py  gec_agent.py
src/agents/prompts/: base.py  prompt_01_zero_shot.py  prompt_02_few_shot.py  prompt_03_minimal_edits.py
src/llm/: litellm.py  router.py
src/models/: __init__.py  base.py  gec.py
src/utils/: __init__.py  detokenizer.py  parallel.py  tokenizer.py
ua_evaluation/: error_type_eval.py  evaluation.py
