[project]
name = "unlp-2026"
version = "0.1.0"
description = "Code and experiments for minimal-edit Ukrainian grammatical error correction with prompting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "errant>=3.0.0",
    "gec-metrics>=0.1.1",
    "litellm<=1.82.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "spacy>=3.8.11",
    "stanza>=1.11.0",
    "tqdm>=4.67.3",
    "ua-gec>=2.1.3",
    "vertexai>=1.71.1",
]
